Initialize structure of sidebar
The green background color and border are currently a placeholder for
the eventual image.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="image-sidebar">
+        <div class="image-sidebar-logo">
+            <img src="/odin-lined.png" alt="Logo for The Odin Project" class="odin-logo">
+            <div class="logo-title">ODIN</div>
+        </div>
+    </div>
     
 </body>
 </html>
