Initialize structure of main page contents

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             <div class="logo-title">ODIN</div>
         </div>
     </div>
+    <div class="main-content">
+        <div class="form-description-wrapper"></div>
+        <div class="form-content-wrapper"></div>
+        <div class="account-options-wrapper"></div>
+    </div>
     
 </body>
 </html>
