Add dummy content and sizing to content sections

--- a/index.html
+++ b/index.html
@@ -14,9 +14,19 @@
         </div>
     </div>
     <div class="main-content">
-        <div class="form-description-wrapper"></div>
+        <div class="form-description-wrapper">
+            <p>
+                This is not a real online service! You know you need something like this in
+                your life to help you realize your deepest dreams.
+            </p>
+            <p>Sign up <em>now</em> to get started!</p>
+            <br>
+            <p>You <em>know</em> you want to...</p>
+        </div>
         <div class="form-content-wrapper"></div>
-        <div class="account-options-wrapper"></div>
+        <div class="account-options-wrapper">
+            Dummy content
+        </div>
     </div>
     
 </body>
