Add beginning form content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
             <br>
             <p>You <em>know</em> you want to...</p>
         </div>
-        <div class="form-content-wrapper"></div>
+        <div class="form-content-wrapper">
+            <p>Let's do this!</p>
+            <form action="" method="get">
+                <label for="firstname">First name</label>
+                <input type="text" id="firstname" name="firstname">
+                <label for="lastname">Last name</label>
+                <input type="text" id="lastname" name="lastname">
+            </form>
+        </div>
         <div class="account-options-wrapper">
             Dummy content
         </div>
