--- a/index.html
+++ b/index.html
@@ -26,10 +26,38 @@
         <div class="form-content-wrapper">
             <p>Let's do this!</p>
             <form action="" method="get">
-                <label for="firstname">First name</label>
-                <input type="text" id="firstname" name="firstname">
-                <label for="lastname">Last name</label>
-                <input type="text" id="lastname" name="lastname">
+                    <div class="form-line">
+                        <div class="form-item">
+                            <label for="firstname">First name</label>
+                            <input type="text" id="firstname" name="user_firstname">
+                        </div>
+                        <div class="form-item">
+                            <label for="lastname">Last name</label>
+                            <input type="text" id="lastname" name="user_lastname">
+                        </div>
+                    </div>
+
+                    <div class="form-line">
+                        <div class="form-item">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="useremail">
+                        </div>
+                        <div class="form-item">
+                            <label for="phone_number">Phone number</label>
+                            <input type="tel" id="phone_number" name="user_phone">
+                        </div>
+                    </div>
+
+                    <div class="form-line">
+                        <div class="form-item">
+                            <label for="password">Password</label>
+                            <input type="password" id="password" name="user_password">
+                        </div>
+                        <div class="form-item">
+                            <label for="confirmpassword">Confirm password</label>
+                            <input type="password" id="confirmpassword" name="user_confirmpassword">
+                        </div>
+                    </div>
             </form>
         </div>
         <div class="account-options-wrapper">
