--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </div>
                     </div>
 
-                    <div class="form-line">
+                    <div class="form-line last-form-item">
                         <div class="form-item">
                             <label for="password">Password</label>
                             <input type="password" id="password" name="user_password">
