Add submit button to html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </form>
         </div>
         <div class="account-options-wrapper">
-            Dummy content
+            <button type="submit">Create Account</button>
         </div>
     </div>
     
