--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </div>
         <div class="account-options-wrapper">
             <button type="submit">Create Account</button>
+            <p class="account-login">Already have an account? <a href="">Log in</a></p>
         </div>
     </div>
     
