--- a/index.html
+++ b/index.html
@@ -23,46 +23,46 @@
             <br>
             <p>You <em>know</em> you want to...</p>
         </div>
-        <div class="form-content-wrapper">
-            <p>Let's do this!</p>
-            <form action="" method="get">
-                    <div class="form-line">
-                        <div class="form-item">
-                            <label for="firstname">First name</label>
-                            <input type="text" id="firstname" name="user_firstname">
+        <div class="all-form-elements">
+            <form action="#" method="get">
+                <div class="form-content-wrapper">
+                    <p>Let's do this!</p>
+                        <div class="form-line">
+                            <div class="form-item">
+                                <label for="firstname">First name</label>
+                                <input type="text" id="firstname" name="user_firstname">
+                            </div>
+                            <div class="form-item">
+                                <label for="lastname">Last name</label>
+                                <input type="text" id="lastname" name="user_lastname">
+                            </div>
                         </div>
-                        <div class="form-item">
-                            <label for="lastname">Last name</label>
-                            <input type="text" id="lastname" name="user_lastname">
+                        <div class="form-line">
+                            <div class="form-item">
+                                <label for="email">Email</label>
+                                <input type="email" id="email" name="useremail">
+                            </div>
+                            <div class="form-item">
+                                <label for="phone_number">Phone number</label>
+                                <input type="tel" id="phone_number" name="user_phone">
+                            </div>
                         </div>
-                    </div>
-
-                    <div class="form-line">
-                        <div class="form-item">
-                            <label for="email">Email</label>
-                            <input type="email" id="email" name="useremail">
+                        <div class="form-line last-form-item">
+                            <div class="form-item">
+                                <label for="password">Password</label>
+                                <input type="password" id="password" name="user_password">
+                            </div>
+                            <div class="form-item">
+                                <label for="confirmpassword">Confirm password</label>
+                                <input type="password" id="confirmpassword" name="user_confirmpassword">
+                            </div>
                         </div>
-                        <div class="form-item">
-                            <label for="phone_number">Phone number</label>
-                            <input type="tel" id="phone_number" name="user_phone">
-                        </div>
-                    </div>
-
-                    <div class="form-line last-form-item">
-                        <div class="form-item">
-                            <label for="password">Password</label>
-                            <input type="password" id="password" name="user_password">
-                        </div>
-                        <div class="form-item">
-                            <label for="confirmpassword">Confirm password</label>
-                            <input type="password" id="confirmpassword" name="user_confirmpassword">
-                        </div>
-                    </div>
+                </div>
+                <div class="account-options-wrapper">
+                    <button type="submit">Create Account</button>
+                    <p class="account-login">Already have an account? <a href="">Log in</a></p>
+                </div>
             </form>
-        </div>
-        <div class="account-options-wrapper">
-            <button type="submit">Create Account</button>
-            <p class="account-login">Already have an account? <a href="">Log in</a></p>
         </div>
     </div>
     
