--- a/index.html
+++ b/index.html
@@ -29,31 +29,31 @@
                     <div class="form-line">
                         <div class="form-item">
                             <label for="firstname">First name</label>
-                            <input type="text" id="firstname" name="user_firstname">
+                            <input type="text" id="firstname" name="user_firstname" required>
                         </div>
                         <div class="form-item">
                             <label for="lastname">Last name</label>
-                            <input type="text" id="lastname" name="user_lastname">
+                            <input type="text" id="lastname" name="user_lastname" required>
                         </div>
                     </div>
                     <div class="form-line">
                         <div class="form-item">
                             <label for="email">Email</label>
-                            <input type="email" id="email" name="useremail">
+                            <input type="email" id="email" name="useremail" required>
                         </div>
                         <div class="form-item">
                             <label for="phone_number">Phone number</label>
-                            <input type="tel" id="phone_number" name="user_phone">
+                            <input type="tel" id="phone_number" name="user_phone" required>
                         </div>
                     </div>
                     <div class="form-line last-form-line">
                         <div class="form-item">
                             <label for="password">Password</label>
-                            <input type="password" id="password" name="user_password">
+                            <input type="password" id="password" name="user_password" required>
                         </div>
                         <div class="form-item">
                             <label for="confirmpassword">Confirm password</label>
-                            <input type="password" id="confirmpassword" name="user_confirmpassword">
+                            <input type="password" id="confirmpassword" name="user_confirmpassword" required>
                         </div>
                     </div>
                 </form>
