Add phone number pattern to phone number input

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </div>
                         <div class="form-item">
                             <label for="phone_number">Phone number</label>
-                            <input type="tel" id="phone_number" name="user_phone" required>
+                            <input type="tel" id="phone_number" name="user_phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
                         </div>
                     </div>
                     <div class="form-line last-form-line">
