--- a/index.html
+++ b/index.html
@@ -29,21 +29,23 @@
                     <div class="form-line">
                         <div class="form-item">
                             <label for="firstname">First name</label>
-                            <input type="text" id="firstname" name="user_firstname" required>
+                            <input type="text" id="firstname" name="user_firstname" required placeholder="John">
                         </div>
                         <div class="form-item">
                             <label for="lastname">Last name</label>
-                            <input type="text" id="lastname" name="user_lastname" required>
+                            <input type="text" id="lastname" name="user_lastname" required placeholder="Doe">
                         </div>
                     </div>
                     <div class="form-line">
                         <div class="form-item">
                             <label for="email">Email</label>
-                            <input type="email" id="email" name="useremail" required>
+                            <input type="email" id="email" name="useremail" required placeholder="myemail@mysite.com">
                         </div>
                         <div class="form-item">
                             <label for="phone_number">Phone number</label>
-                            <input type="tel" id="phone_number" name="user_phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+                            <input type="tel" id="phone_number" name="user_phone" 
+                            pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required
+                            placeholder="123-456-7890">
                         </div>
                     </div>
                     <div class="form-line last-form-line">
