--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
                 <form action="#" method="get" id="form">
                     <div class="form-line">
                         <div class="form-item">
-                            <label for="firstname">First name</label>
+                            <label for="firstname">First name <span aria-label="required">*</span></label>
                             <input type="text" id="firstname" name="user_firstname" required placeholder="John">
                         </div>
                         <div class="form-item">
-                            <label for="lastname">Last name</label>
+                            <label for="lastname">Last name <span aria-label="required">*</span></label>
                             <input type="text" id="lastname" name="user_lastname" required placeholder="Doe">
                         </div>
                     </div>
                     <div class="form-line">
                         <div class="form-item">
-                            <label for="email">Email</label>
+                            <label for="email">Email <span aria-label="required">*</span></label>
                             <input type="email" id="email" name="useremail" required placeholder="myemail@mysite.com">
                         </div>
                         <div class="form-item">
-                            <label for="phone_number">Phone number</label>
+                            <label for="phone_number">Phone number <span aria-label="required">*</span></label>
                             <input type="tel" id="phone_number" name="user_phone" 
                             pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required
                             placeholder="123-456-7890">
@@ -50,11 +50,11 @@
                     </div>
                     <div class="form-line last-form-line">
                         <div class="form-item">
-                            <label for="password">Password</label>
+                            <label for="password">Password <span aria-label="required">*</span></label>
                             <input type="password" id="password" name="user_password" required>
                         </div>
                         <div class="form-item">
-                            <label for="confirmpassword">Confirm password</label>
+                            <label for="confirmpassword">Confirm password <span aria-label="required">*</span></label>
                             <input type="password" id="confirmpassword" name="user_confirmpassword" required>
                         </div>
                     </div>
