--- a/index.html
+++ b/index.html
@@ -51,11 +51,15 @@
                     <div class="form-line last-form-line">
                         <div class="form-item">
                             <label for="password">Password <span aria-label="required">*</span></label>
-                            <input type="password" id="password" name="user_password" required>
+                            <input type="password" id="password" name="user_password" required
+                            placeholder="Must be at least 6 characters in length"
+                            minlength="6">
                         </div>
                         <div class="form-item">
                             <label for="confirmpassword">Confirm password <span aria-label="required">*</span></label>
-                            <input type="password" id="confirmpassword" name="user_confirmpassword" required>
+                            <input type="password" id="confirmpassword" name="user_confirmpassword" required
+                            placeholder="Must match the password entered before"
+                            minlength="6">
                         </div>
                     </div>
                 </form>
